[gd_scene load_steps=5 format=3 uid="uid://qpoiyeldq1rl"]

[ext_resource type="FontFile" uid="uid://kqhslcgh7qoa" path="res://fonts/Xolonium-Regular.ttf" id="1_uxdyf"]
[ext_resource type="Script" path="res://buttons.gd" id="1_v0pmb"]
[ext_resource type="Script" path="res://number1.gd" id="2_vh8se"]
[ext_resource type="Script" path="res://number2.gd" id="3_pxkp3"]

[node name="Buttons" type="CanvasLayer"]
script = ExtResource("1_v0pmb")

[node name="number1" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -163.0
offset_right = 99.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "1"
script = ExtResource("2_vh8se")

[node name="number2" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -163.0
offset_right = 199.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "2"
script = ExtResource("3_pxkp3")

[node name="number3" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -163.0
offset_right = 299.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "3"

[node name="number4" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = -163.0
offset_right = 399.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "4"

[node name="number5" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = -163.0
offset_right = 499.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "5"

[node name="number6" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = -163.0
offset_right = 599.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "6"

[node name="number7" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_top = -163.0
offset_right = 699.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "7"

[node name="number8" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 600.0
offset_top = -363.0
offset_right = 699.0
offset_bottom = -200.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "8"

[node name="number9" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = -363.0
offset_right = 599.0
offset_bottom = -200.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "9"

[node name="plusoperator" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = -363.0
offset_right = 399.0
offset_bottom = -200.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "+"

[node name="minusoperator" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -363.0
offset_right = 299.0
offset_bottom = -200.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "-"

[node name="timesoperator" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -363.0
offset_right = 199.0
offset_bottom = -200.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "x"

[node name="divideoperator" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -363.0
offset_right = 99.0
offset_bottom = -200.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "/"

[node name="equaloperator" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = -363.0
offset_right = 499.0
offset_bottom = -200.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "="

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 50.0
offset_right = 280.0
offset_bottom = 250.0
grow_horizontal = 2
color = Color(0.701961, 0.701961, 0.701961, 1)

[node name="input" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_top = 50.0
offset_right = 45.5
offset_bottom = 205.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "0"

[node name="clear" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 64
text = "CLEAR"

[node name="number0" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -81.5
offset_right = 99.0
offset_bottom = 81.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "0
"

[node name="leftparenoperator" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -81.5
offset_right = -100.0
offset_bottom = 81.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = "("

[node name="rightparenopeator" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -81.5
offset_right = -30.0
offset_bottom = 81.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_uxdyf")
theme_override_font_sizes/font_size = 128
text = ")"

[connection signal="pressed" from="number1" to="." method="_on_number_1_pressed"]
[connection signal="pressed" from="number2" to="." method="_on_number_2_pressed"]
[connection signal="pressed" from="number3" to="." method="_on_number_3_pressed"]
[connection signal="pressed" from="number4" to="." method="_on_number_4_pressed"]
[connection signal="pressed" from="number5" to="." method="_on_number_5_pressed"]
[connection signal="pressed" from="number6" to="." method="_on_number_6_pressed"]
[connection signal="pressed" from="number7" to="." method="_on_number_7_pressed"]
[connection signal="pressed" from="number8" to="." method="_on_number_8_pressed"]
[connection signal="pressed" from="number9" to="." method="_on_number_9_pressed"]
[connection signal="pressed" from="plusoperator" to="." method="_on_plusoperator_pressed"]
[connection signal="pressed" from="minusoperator" to="." method="_on_minusoperator_pressed"]
[connection signal="pressed" from="timesoperator" to="." method="_on_timesoperator_pressed"]
[connection signal="pressed" from="divideoperator" to="." method="_on_divideoperator_pressed"]
[connection signal="pressed" from="equaloperator" to="." method="_on_equaloperator_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="number0" to="." method="_on_number_0_pressed"]
[connection signal="pressed" from="leftparenoperator" to="." method="_on_leftparenoperator_pressed"]
[connection signal="pressed" from="rightparenopeator" to="." method="_on_rightparenopeator_pressed"]
